# FoxForge-GG

./: .gitignore  .oxlintrc.json  AGENTS.md  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  turtles.md  vite.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  data.yml  pages.yml  release.yml
docs/: 01-project-brief.md  02-architecture.md  03-Calculation-Engine.md  04-data-sourcing.md  05-implementation-plan.md  06-theme-plan.md  07-distribution.md  08-branding.md  10-patch-watch-checklist.md  11-adding-content.md  Attack Speed Calculator.xlsx
public/data/: manifest.json  patch-1.23.1.1.json  patch-1.23.2.5.json
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: BuildSummaryBar.tsx  CollapsibleCard.tsx  CompareView.tsx  EmblemOptimizer.tsx  EmblemSetGuide.tsx  EmblemSetSummary.tsx  GradeField.tsx  HeldItemsInventory.tsx  InventoryManager.tsx  LevelGraph.tsx  LoadoutBar.tsx  LoadoutEditor.tsx  MoveIcon.tsx  MoveMedia.tsx  MovesCard.tsx  PickerModal.tsx  PokemonPicker.tsx  RecommendPanel.tsx  SearchProgressOverlay.tsx  Segmented.tsx  SettingsMenu.tsx  StatPanel.tsx  Tooltip.tsx  tips.tsx
src/data/: attackSpeedBoosts.json  dataSource.ts  emblemOptimizerPresets.json  example-lucario.json  gameData.ts  loadBundle.ts  patch-1.23.1.1.json  patch-current.json  recommendationProfiles.json  verifyPatch.ts
src/engine/: attackSpeed.ts  derive.ts  effects.ts  emblems.ts  formulas.ts  moves.ts  recommend.ts  (+1 more)
tools/: make-icons.mjs  validate-mobility-floor.ts
(+123 files in other folders)
