[package]
name = "unite-build-optimizer"
version = "0.1.0"
description = "FoxForge GG — Pokémon UNITE build optimizer"
license = "GPL-3.0-only"
edition = "2021"

[lib]
name = "unite_build_optimizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
